# PFE-ECG

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  requirements.txt
include/: ads1115.h  ecg_classifier.h  ecg_hw.h  ecg_model_generated.h  ecg_processing.h  main.h  matlab_stream.h  pan_tompkins.h  sh1106_oled.h  tasks_monitor.h
main/: CMakeLists.txt  ads1115.c  app_main.c  ecg_classifier.c  ecg_hw.c  ecg_model_generated.c  ecg_processing.c  matlab_stream.c  pan_tompkins.c  sh1106_oled.c  tasks_monitor.c
matlab/: plot_ecg_capture.m  read_ech_stream.m
notebooks/: 01_ecg_signal_analysis.ipynb  02_pan_tompkins_pipeline.ipynb  03_r_peak_detection.ipynb  04_bpm_estimation.ipynb  05_cnn_training.ipynb  06_model_evaluation.ipynb  07_algorithm_vs_ai.ipynb  08_noise_analysis.ipynb
reports/: algorithm_vs_ai_comparison.csv  algorithm_vs_ai_report.txt  algorithm_vs_ai_summary.csv  cnn_class_summary.csv  cnn_classification_report.csv  cnn_classification_report.txt  ecg_noise_analysis_summary.csv
scripts/: build_atr_training_dataset.py  build_cnn_arrhythmia_dataset.py  build_morphological_features.py  build_real_arrhythmia_dataset.py  build_rr_training_dataset.py  build_synthetic_ads1115_dataset.py  build_synthetic_feature_dataset.py  build_training_dataset.py  compare_real_vs_augmented.py  demo_cnn_arrhythmia.py  demo_cnn_arrhythmia_premium.py  merge_morphology_with_arrhythmia_dataset.py  merge_real_and_synthetic.py  merge_rr_atr_training_dataset.py  run_batch_pipeline.py  run_pipeline.py  setup_mitbih.py  test_synthetic_pipeline.py  train_cnn_arrhythmia_model.py  (+7 more)
(+37 files in other folders)
