idf_component_register(
    SRCS
        "app_main.c"
        "ads1115.c"
        "ecg_hw.c"
        "pan_tompkins.c"
        "ecg_processing.c"
        "ecg_classifier.c"
        "ecg_model_generated.c"
        "matlab_stream.c"
        "sh1106_oled.c"
        "tasks_monitor.c"
    INCLUDE_DIRS
        "../include"
)